# tigris-bench

./: .gitignore  README.md
cortex-m-deployability/: .gitignore  BUILD.md  CMakeLists.txt  README.md
cortex-m-deployability/boards/nucleo_f446re/: STM32F446RETx_FLASH.ld  board.cmake  bsp.c
cortex-m-deployability/boards/nucleo_h753zi/: STM32H753ZITx_FLASH.ld  board.cmake  bsp.c
cortex-m-deployability/boards/pico2_rp2350/: CMakeLists.txt  platform_pico.c
cortex-m-deployability/harness/: main.c  platform.h
cortex-m-deployability/models/: prepare_ts.py
cortex-m-deployability/results/: summary.json
cortex-m-deployability/scripts/: capture_serial.py  flash.sh  flash_pico.py  prepare_ad.py  prepare_matched.py  prepare_mobilenetv2.py  results.py  run_all.sh  validate_accuracy.py
cortex-m-deployability/tests/: host_cmsis_validate.c
cortex-m-deployability/tflm/: main.cc
cortex-m-deployability/tools/: bin2c.py  tflite_to_qdq_onnx.py
tflm-esp32s3/: .gitignore  README.md  requirements.txt
tflm-esp32s3/models/: README.md  prepare.py
tflm-esp32s3/scripts/: results.py  run_all.sh  validate_accuracy.py
tflm-esp32s3/tflm-esp/: CMakeLists.txt  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s3
tflm-esp32s3/tflm-esp/main/: CMakeLists.txt  idf_component.yml  main.cc
tflm-esp32s3/tflm-esp/scripts/: run_benchmark.sh
tflm-esp32s3/tigris-esp/: CMakeLists.txt  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s3
tflm-esp32s3/tigris-esp/components/tigris_runtime/: CMakeLists.txt  idf_component.yml
tflm-esp32s3/tigris-esp/main/: CMakeLists.txt  main.c
